--- a/verify.html
+++ b/verify.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>E-Pass Verify — Kiosk</title>
-    <meta name="description" content="E-Pass Verification Kiosk (demo)" />
+    <meta name="description" content="E-Pass Verification Kiosk" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.8/css/bootstrap.min.css"
         integrity="sha512-2bBQCjcnw658Lho4nlXJcc6WkV/UxpE/sAokbXPxQNGqmNdQrWqtw26Ns9kFF/yG792pKR1Sx8/Y1Lf1XN4GKA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -118,7 +118,7 @@
                     <div class="small text-muted">Check-in kiosk — scan or enter Registration ID</div>
                 </div>
             </div>
-            <div class="small text-muted">Bootstrap</div>
+                
         </div>
     </header>
 
